--- a/charts/application/values.yaml
+++ b/charts/application/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: us-central1-docker.pkg.dev/xltmkfaeyrcibbij/artemis/artemis
+  repository: nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "4.0.0"
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
@@ -42,20 +42,19 @@ service:
 
 ingress:
   enabled: false
-  annotations: 
-    ingress.kubernetes.io/ssl-redirect: "false"
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    acme.cert-manager.io/http01-edit-in-place: "true"
-    kubernetes.io/ingress.class: nginx
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: artemis.ryanchunn.com
-      paths: 
+    - host: chart-example.local
+      paths:
         - path: /
-  tls: 
-   - secretName: artemis
-     hosts:
-       - artemis.ryanchunn.com
-  ingressClassName: nginx
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
